--- a/Projekt/projekt/user_account/templates/user_account/login_and_register.html
+++ b/Projekt/projekt/user_account/templates/user_account/login_and_register.html
@@ -18,7 +18,7 @@
               <hr>
               <input type="text" class="form-control textboxSignIn" name="username" placeholder="Login">
               <input type="password" class="form-control textboxSignIn" name="password" placeholder="Password">
-              <button type="submit" class="btn btn-info buttonSignIn" value="Login" class="form login"> Sign in </button>
+              <button type="submit" class="btn btn-info buttonSignIn" value="Login" id="buttonOwn"> Sign in </button>
 
               <!--    <p class="message" >You don't have an account? <a href="#register" data-toggle="modal" data-target="#register" >Sign up!</a></p> -->
             </form>
@@ -47,7 +47,7 @@
             <input type="text" class="form-control" name="username" placeholder="Login">
             <input type="email" class="form-control" name="email" placeholder="Email">
             <input type="password" class="form-control" name="password" placeholder="Hasło">
-            <button type="submit" class="btn btn-info" value="Login" class="form login">Sign up</button>
+            <button type="submit" class="btn btn-info" value="Login" id="buttonOwn">Sign up</button>
             <p class="message">You have an account? <a href="#login" data-toggle="modal" data-target="#login">Sign in!</a></p>
           </form>
         </div>
