--- a/Projekt/projekt/main_app/templates/main_app/test.html
+++ b/Projekt/projekt/main_app/templates/main_app/test.html
@@ -28,7 +28,7 @@
         <script type="text/javascript" src="{% static 'main_app/plugin/tinymce/tinymce.min.js' %}"></script>
         <script type="text/javascript" src="{% static 'main_app/plugin/tinymce/init-tinymce.js' %}"></script>
         <link rel="stylesheet" href="{% static 'main_app/css/base.css' %}" type="text/css">
-        <button type="submit" class="btn btn-default" value="Login" class="form login"> Zaloguj </button>
+        <button type="submit" class="btn btn-default" value="Login" id="buttonOwn"> Zaloguj </button>
 
     </form>
 
@@ -38,7 +38,7 @@
 <form method="post" action="{% url 'main_app:simple_upload' %}" enctype="multipart/form-data">
     {% csrf_token %}
     <input type="file" name="myfile">
-    <button type="submit">Upload</button>
+    <button type="submit" id="buttonOwn">Upload</button>
 </form>
 
 {% if uploaded_file_url %}
