--- a/Projekt/projekt/tests_app/templates/tests_app/test.html
+++ b/Projekt/projekt/tests_app/templates/tests_app/test.html
@@ -11,7 +11,7 @@
             <form action="{% url 'tests_app:testChangeBackgroundColor' test.id %}" method="post">
                 {% csrf_token %}
                 <input type="color" name="text">{{test.backgroundColor}}</input>
-                <button type="submit" class="btn btn-default" value="Change" class="form title"> Change BackgroundColor
+                <button type="submit" class="btn btn-default" value="Change" id="buttonOwn"> Change BackgroundColor
                 </button>
             </form>
         </div>
@@ -26,7 +26,7 @@
             <form action="{% url 'tests_app:testChangeImage' test.id %}" method="post">
                 {% csrf_token %}
                 <input type="file" name="text">{{test.image}}</input>
-                <button type="submit" class="btn btn-default" value="Change" class="form title"> Change image
+                <button type="submit" class="btn btn-default" value="Change" id="buttonOwn"> Change image
                 </button>
             </form>
         </div>
@@ -42,7 +42,7 @@
             <form action="{% url 'tests_app:testChangeIsBest' test.id %}" method="post">
                 {% csrf_token %}
                 <input type="checkbox" name="text">{{test.isBest}}</input>
-                <button type="submit" class="btn btn-default" value="Change" class="form title"> Change isBest
+                <button type="submit" class="btn btn-default" value="Change" id="buttonOwn"> Change isBest
                 </button>
             </form>
         </div>
@@ -58,7 +58,7 @@
             <form action="{% url 'tests_app:testChangeIsVisible' test.id %}" method="post">
                 {% csrf_token %}
                 <input type="checkbox" name="text">{{test.isVisible}}</input>
-                <button type="submit" class="btn btn-default" value="Change" class="form title"> Change is visible
+                <button type="submit" class="btn btn-default" value="Change" id="buttonOwn"> Change is visible
                 </button>
             </form>
         </div>
@@ -73,7 +73,7 @@
             <form action="{% url 'tests_app:testChangeCategory' test.id %}" method="post">
                 {% csrf_token %}
                 <textarea name="text">{{test.category}}</textarea>
-                <button type="submit" class="btn btn-default" value="Change" class="form title"> Change category
+                <button type="submit" class="btn btn-default" value="Change" id="buttonOwn"> Change category
                 </button>
             </form>
         </div>
@@ -93,7 +93,7 @@
             <form action="{% url 'tests_app:testChangeTitle' test.id %}" method="post">
                 {% csrf_token %}
                 <textarea class="tinymce" name="text">{{test.title}}</textarea>
-                <button type="submit" class="btn btn-default" value="Change" class="form title"> Change title
+                <button type="submit" class="btn btn-default" value="Change" id="buttonOwn"> Change title
                 </button>
             </form>
         </div>
@@ -113,7 +113,7 @@
             <form action="{% url 'tests_app:testChangeDate' test.id %}" method="post">
                 {% csrf_token %}
                 <textarea class="tinymce" name="text">{{test.date}}</textarea>
-                <button type="submit" class="btn btn-default" value="Change" class="form title"> Change dates
+                <button type="submit" class="btn btn-default" value="Change" id="buttonOwn"> Change dates
                 </button>
             </form>
         </div>
@@ -134,7 +134,7 @@
             <form action="{% url 'tests_app:testChangeAuthor' test.id %}" method="post">
                 {% csrf_token %}
                 <textarea class="tinymce" name="text">{{test.author}}</textarea>
-                <button type="submit" class="btn btn-default" value="Change" class="form title"> Change author
+                <button type="submit" class="btn btn-default" value="Change" id="buttonOwn"> Change author
                 </button>
             </form>
         </div>
@@ -155,7 +155,7 @@
             <form action="{% url 'tests_app:testChangeText' test.id %}" method="post">
                 {% csrf_token %}
                 <textarea class="tinymce" name="text">{{test.text}}</textarea>
-                <button type="submit" class="btn btn-default" value="Change" class="form title"> Change text
+                <button type="submit" class="btn btn-default" value="Change" id="buttonOwn"> Change text
                 </button>
             </form>
         </div>
